--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -175,6 +175,12 @@ layout: default
             </div>
         </div>
     </div>
+
+	<!-- UY BEGIN -->
+	<div id="uyan_frame"></div>
+	<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2140776"></script>
+	<!-- UY END -->
+
 </article>
 
 <hr>
