--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,12 +18,15 @@
                 <li>
                     <a href="{{ site.baseurl }}/">Home</a>
                 </li>
-				{% for page in site.pages %}{% if page.url contains "projects/" %}{% if page.title %}
-                <li>
-                    <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-                </li>
-                {% endif %}{% endif %}{% endfor %}
-                {% for page in site.pages %}{% if page.url contains "projects/" %}{% else %}{% if page.title %}
+
+				<!--{% for page in site.pages %}{% if page.url contains "projects/" %}{% if page.title %}-->
+                <!--<li>-->
+                    <!--<a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>-->
+                <!--</li>-->
+                <!--{% endif %}{% endif %}{% endfor %}-->
+                {% for page in site.pages %}
+                {% if page.url contains "projects/" or page.title == 404 %}{% else %}
+                {% if page.title %}
                 <li>
                     <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
                 </li>
