--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,67 +19,7 @@ layout: default
     </div>
 </header>
 
-
-
-
-
-{% for post in site.posts %}
-	
-	{% if post.title != page.title and post.author == page.author %}
-	
-	<div class="float-left">
-	<div class="recentpost" style="padding: 10px">
-	
-	<h4> Recently by the same author: </h4> 
-	
-	<hr class="style-one">
-	
-	<a href="{{ post.url | prepend: site.baseurl }}"><h2 class="post-title"> {{ post.title }}</h2></a>
-	
-	{% if post.subtitle %}
-		<h4 class="post-subtitle">{{ post.subtitle }}</h4>
-	{% endif %}
-	
-	<p class="post-meta" style="margin-top: 5px;margin-bottom:5px; font-size: 0.8em">Posted by {{ post.author }} on {{ post.date | date: "%B %-d, %Y" }}</p>
-	
-	<div class="notepad-index-post-tags" style="">
-	{% for tag in post.tags %}<a href="{{ site.baseurl }}/search/index.html#{{ tag | cgi_encode }}" title="Other posts from the {{ tag | capitalize }} tag">{{ tag | capitalize }}</a>{% unless forloop.last %}&nbsp;{% endunless %}{% endfor %}
-	</div> 
-	
-			{% for member in site.data.members %}
-{% if member.name == page.author %} 
-
-<hr class="style-one">
-
-	<img src="{{ member.img }}" style="margin-top:0px; margin-bottom:5px; margin:auto; width:120px !important; border-radius: 50%;">
-	
-	<h3>{{ member.name }}</h3>
-	
-	<h4>{{ member.role }}</h4>
-	
-	{% if member.github %} 
-	<a href="https://github.com/{{ member.github }}" title="Github"><img src="{{ "/img/icons/github-icon.png " | prepend: site.baseurl }}" style="height:50px; float:right; margin-bot:10px"></a>
-	{% endif %}
-	{% if member.gplus %}
-	<a href="{{ member.gplus }}" title="Google Plus"><img src="{{ "/img/icons/gplus-icon.png " | prepend: site.baseurl }}" style="height:37px; float:right; margin-top:6px"></a>
-	{% endif %}
-	{% if member.url %}
-	<a href="{{ member.url }}" title="Google Plus"><img src="{{ "/img/icons/url-icon.png "| prepend: site.baseurl }}" style="height:33px; float:right; margin-top:9px;  margin-right: 10px"></a>
-	{% endif %}
-	
-{% endif %}
-{% endfor %}
-	
-	</div>
-	</div>
-	
-	{% assign recentpost = post.title %}
-	
-	{% endif %}
-		
-	{% break %}	
-	
-{% endfor %}
+<!--{% include float_left.html %}-->
 
 <!-- Also Interesting -->
 
@@ -105,7 +45,7 @@ layout: default
 			<h4 class="post-subtitle">{{ post.subtitle }}</h4>
 		{% endif %}
 		
-		<p class="post-meta" style="margin-top: 5px;margin-bottom:5px; font-size: 0.8em">Posted by {{ post.author }} on {{ post.date | date: "%B %-d, %Y" }}</p>
+		<p class="post-meta" style="margin-top: 5px;margin-bottom:5px; font-size: 0.8em">Posted by {{ post.author }} }</p>
 		
 		<div class="notepad-index-post-tags" style="">
 		{% for tag in post.tags %}<a href="{{ site.baseurl }}/search/index.html#{{ tag | cgi_encode }}" title="Other posts from the {{ tag | capitalize }} tag">{{ tag | capitalize }}</a>{% unless forloop.last %}&nbsp;{% endunless %}{% endfor %}
@@ -150,60 +90,73 @@ layout: default
 <!-- Post Content -->
 {% include imagezoom.html %}
 
-<article>
-    <div id="content" class="container">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+<!--<article>-->
+    <!--<div id="content" class="container">-->
+        <!--<div class="row">-->
+            <!--<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">-->
 
-				{{ content | markdownify }}
+				<!--{{ content | markdownify }}-->
 
-                <hr>
+                <!--<hr>-->
 
-                <ul class="pager">
-                    {% if page.previous.url %}
-                    <li class="previous">
-                        <a href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{page.previous.title}}">&larr; Previous Post</a>
-                    </li>
-                    {% endif %}
-                    {% if page.next.url %}
-                    <li class="next">
-                        <a href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{page.next.title}}">Next Post &rarr;</a>
-                    </li>
-                    {% endif %}
-                </ul>
+                <!--<ul class="pager">-->
+                    <!--{% if page.previous.url %}-->
+                    <!--<li class="previous">-->
+                        <!--<a href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{page.previous.title}}">&larr; Previous Post</a>-->
+                    <!--</li>-->
+                    <!--{% endif %}-->
+                    <!--{% if page.next.url %}-->
+                    <!--<li class="next">-->
+                        <!--<a href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{page.next.title}}">Next Post &rarr;</a>-->
+                    <!--</li>-->
+                    <!--{% endif %}-->
+                <!--</ul>-->
 
-            </div>
+            <!--</div>-->
 
-			<div id="disqus_thread" style=" text-align: center; margin: 0 auto; width: 80%"></div>
-			<script>
+			<!--<div id="disqus_thread" style=" text-align: center; margin: 0 auto; width: 80%"></div>-->
+			<!--<script>-->
 
-                /**
-                 *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-                 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-				/*
-				 var disqus_config = function () {
-				 this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-				 this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-				 };
-				 */
-                (function() { // DON'T EDIT BELOW THIS LINE
-                    var d = document, s = d.createElement('script');
-                    s.src = 'https://temilee-github-io.disqus.com/embed.js';
-                    s.setAttribute('data-timestamp', +new Date());
-                    (d.head || d.body).appendChild(s);
-                })();
-			</script>
-			<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                <!--/**-->
+                 <!--*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.-->
+                 <!--*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/-->
+				<!--/*-->
+				 <!--var disqus_config = function () {-->
+				 <!--this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable-->
+				 <!--this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable-->
+				 <!--};-->
+				 <!--*/-->
+                <!--(function() { // DON'T EDIT BELOW THIS LINE-->
+                    <!--var d = document, s = d.createElement('script');-->
+                    <!--s.src = 'https://temilee-github-io.disqus.com/embed.js';-->
+                    <!--s.setAttribute('data-timestamp', +new Date());-->
+                    <!--(d.head || d.body).appendChild(s);-->
+                <!--})();-->
+			<!--</script>-->
+			<!--<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>-->
 
 
-		</div>
-    </div>
+		<!--</div>-->
+    <!--</div>-->
 
+<!--</article>-->
+
+<header class="post-header">
+		<span>Posted on </span><span class="post-meta">{{ page.date | date: "%B %-d, %Y" }}</span>
+	<!--<h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>-->
+</header>
+
+<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl | prepend: site.url }}">
+
+<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+	<div class="entry-content" itemprop="articleBody">
+		{{ content }}
+	</div>
 </article>
 
 <hr>
 
-{% include _comments.html %}
+<!--{% include _comments.html %}-->
 
 <hr>
 
