--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -442,6 +442,7 @@ div.float-left{
     width:300px;
     position:fixed;
     left:0;
+    top:33%;
 	/* margin-top:50px; */
 	margin-left:2%;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
