--- a/_includes/index.html
+++ b/_includes/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" type="text/css" href="css/demo.css" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
 		<link rel="stylesheet" type="text/css" href="css/knobKnob.css" />
-        <link href='http://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet' type='text/css' />
+        <link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet' type='text/css' />
 		<script type="text/javascript" src="js/modernizr.custom.69142.js"></script> 
     </head>
     <body>
