--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -60,7 +60,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://github.com/projectpages/project-pages/fork">
+                        <a href="https://github.com/TemiLee">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-code-fork fa-stack-1x fa-inverse"></i>
@@ -69,7 +69,7 @@
                     </li>
                     {% endif %}				
                 </ul>
-                <p class="copyright text-muted"> Copyright © <a href="http://temilee.github.io/" target="_blank">Temi Lee</a>,  <a href="http://mined.gatech.edu/" target="_blank">MINED@GaTech</a> and <a href="https://github.com/projectpages" target="_blank">Project Pages</a> 2017. </p>
+                <p class="copyright text-muted"> Copyright © <a href="http://temilee.github.io/" target="_blank">Temi Lee</a>, <a href="https://github.com/TemiLee" target="_blank">My Pages</a> 2017. </p>
             </div>
         </div>
     </div>
