delete some file

--- a/_includes/index.html
+++ b/_includes/index.html
@@ -7,23 +7,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <meta name="description" content="Old School Cassette Player with HTML5 Audio: Vintage format meets modern web tech: an HTML5 audio player with realistic controls" />
         <meta name="keywords" content="cassette, html5, audio, player, css3, buttons, sounds, vintage, old school, javascript, jquery" />
-        <meta name="author" content="Codrops" />
-        <link rel="shortcut icon" href="../favicon.ico"> 
+        <link rel="shortcut icon" href="../favicon.ico">
         <link rel="stylesheet" type="text/css" href="css/demo.css" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
 		<link rel="stylesheet" type="text/css" href="css/knobKnob.css" />
-        <link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet' type='text/css' />
-		<script type="text/javascript" src="js/modernizr.custom.69142.js"></script> 
+		<script type="text/javascript" src="js/modernizr.custom.69142.js"></script>
     </head>
     <body>
     <div id="adsense2" style="width:730px;margin:10px auto">
-<script type="text/javascript"><!--
-google_ad_client = "ca-pub-0107013120141921";
-/* demo页面横幅广告 */
-google_ad_slot = "4192399144";
-google_ad_width = 728;
-google_ad_height = 90;
-//-->
+<script type="text/javascript">
 </script>
 
 </div>
@@ -64,27 +56,8 @@ google_ad_height = 90;
 
 
 <div style="display: none">
-    <script language="javascript" type="text/javascript" src="http://js.users.51.la/4473358.js"></script>
-    <script type="text/javascript">
-        var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-        document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fadd0db9dee36c7a9b64141788e26de72' type='text/javascript'%3E%3C/script%3E"));
-
-</script>
-
-    <script type="text/javascript">
-
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-21395429-1']);
-        _gaq.push(['_trackPageview']);
-
-        (function() {
-            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-        })();
-
-</script>
     </div>
+	<!--TODO 删除文件-->
 		<script src="js/transform.js"></script>
 		<script src="js/knobKnob.jquery.js"></script>
 
