--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,12 +8,15 @@ layout: default
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <div class="post-heading" style="padding: 30px 0">
-                    <h1>{{ page.title }}</h1>
-                    {% if page.subtitle %}
-                    <h2 class="subheading">{{ page.subtitle }}</h2>
-                    {% endif %}
-                    <span class="meta">Posted by {{ page.author }} on {{ page.date | date: "%B %-d, %Y" }}</span>	
-                </div>
+                    <!--<h1>{{ page.title }}</h1>-->
+                    <!--{% if page.subtitle %}-->
+                    <!--<h2 class="subheading">{{ page.subtitle }}</h2>-->
+                    <!--{% endif %}-->
+                    <!--<span class="meta">Posted by {{ page.author }} on {{ page.date | date: "%B %-d, %Y" }}</span>-->
+					{% if site.logo %}
+					<img src= "{{ site.logo }}" style="height: 150px">
+					{% endif %}
+				</div>
             </div>
         </div>
     </div>
@@ -142,8 +145,10 @@ layout: default
 <!--</article>-->
 
 <header class="post-header">
+	<div>
 		<span>Posted on </span><span class="post-meta">{{ page.date | date: "%B %-d, %Y" }}</span>
-	<!--<h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>-->
+	</div>
+	<h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
 </header>
 
 <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl | prepend: site.url }}">
