add roboot in post layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,6 +24,8 @@ layout: default
 
 <!--{% include float_left.html %}-->
 
+{% include float_roboot.html %}
+
 <!-- Also Interesting -->
 
 {% assign relevantpostcount = 0 %}
