--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -148,6 +148,7 @@ layout: default
 
 <header class="post-header">
 	<div>
+		<span>Last Modify </span><span class="post-meta">{{ page.lastmodify | date: "%B %-d, %Y" }}</span><br/>
 		<span>Posted on </span><span class="post-meta">{{ page.date | date: "%B %-d, %Y" }}</span>
 	</div>
 	<h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
