--- a/_includes/float_roboot.html
+++ b/_includes/float_roboot.html
@@ -1,8 +1,8 @@
-<div class="float-right" style = "box-shadow: 0 0 0 #fff;">
+<div class="float-right" style = "box-shadow: 0 0 0 #fff;width: 80px;height: 150px ; align: center;margin-right:13%;">
 
         <!--<link href='/css/roboot.css' rel='stylesheet' type='text/css'>-->
 
-            <svg id="robot" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0" y="0" width="320px" height="300px" viewBox="0 0 160 300" enable-background="new 0 0 320 300" xml:space="preserve">
+    <svg id="robot" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0" y="0" width="80px" height="150px" viewBox="0 0 160 300" enable-background="new 0 0 320 300" xml:space="preserve">
     <rect x="59.722" y="72.779" fill="#333" width="40.557" height="27.564" />
     <g id="head" class="up">
         <g id="leftAntenna">
