--- a/_includes/float_roboot.html
+++ b/_includes/float_roboot.html
@@ -1,4 +1,4 @@
-<div class="float-right" style = "box-shadow: 0 0 0 #fff;width: 80px;height: 150px ; align: center;margin-right:13%;">
+<div class="float-robot">
 
         <!--<link href='/css/roboot.css' rel='stylesheet' type='text/css'>-->
 
