--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,13 +44,13 @@ layout: default
 		
 		<hr class="style-one">
 		
-		<a href="{{ post.url | prepend: site.baseurl }}"><h2 class="post-title"> {{ post.title }}</h2></a>
+		<a href="{{ post.url | prepend: site.baseurl }}"><span class="post-title"> {{ post.title }}</span></a>
 		
 		{% if post.subtitle %}
 			<h4 class="post-subtitle">{{ post.subtitle }}</h4>
 		{% endif %}
 		
-		<p class="post-meta" style="margin-top: 5px;margin-bottom:5px; font-size: 0.8em">Posted by {{ post.author }} }</p>
+		<!--<p class="post-meta" style="margin-top: 5px;margin-bottom:5px; font-size: 0.8em">Posted by {{ post.author }}</p>-->
 		
 		<div class="notepad-index-post-tags" style="">
 		{% for tag in post.tags %}<a href="{{ site.baseurl }}/search/index.html#{{ tag | cgi_encode }}" title="Other posts from the {{ tag | capitalize }} tag">{{ tag | capitalize }}</a>{% unless forloop.last %}&nbsp;{% endunless %}{% endfor %}
