--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -429,11 +429,22 @@ th {
 	border-collapse: collapse;
 }
 
+div.float-robot{
+  width: 80px;
+  height: 150px ;
+  right:0;
+  margin-right:3%;
+  margin-top:20%;
+  position: fixed;
+  box-shadow: 0 0 0 #fff;
+}
+
 div.float-right{
     width:300px;
     position:fixed;
     right:0;
 	/* margin-top:50px; */
+    margin-top:1%;
 	margin-right:2%;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
