--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,8 +38,8 @@ layout: default
 		
 		<div class="float-right">
 		<div class="relevantpost" style="padding: 10px">
-		
-		
+
+		{{ recentpost }}
 		<h4> You may find interesting: </h4> 
 		
 		<hr class="style-one">
@@ -94,57 +94,6 @@ layout: default
 
 <!-- Post Content -->
 {% include imagezoom.html %}
-
-<!--<article>-->
-    <!--<div id="content" class="container">-->
-        <!--<div class="row">-->
-            <!--<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">-->
-
-				<!--{{ content | markdownify }}-->
-
-                <!--<hr>-->
-
-                <!--<ul class="pager">-->
-                    <!--{% if page.previous.url %}-->
-                    <!--<li class="previous">-->
-                        <!--<a href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{page.previous.title}}">&larr; Previous Post</a>-->
-                    <!--</li>-->
-                    <!--{% endif %}-->
-                    <!--{% if page.next.url %}-->
-                    <!--<li class="next">-->
-                        <!--<a href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{page.next.title}}">Next Post &rarr;</a>-->
-                    <!--</li>-->
-                    <!--{% endif %}-->
-                <!--</ul>-->
-
-            <!--</div>-->
-
-			<!--<div id="disqus_thread" style=" text-align: center; margin: 0 auto; width: 80%"></div>-->
-			<!--<script>-->
-
-                <!--/**-->
-                 <!--*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.-->
-                 <!--*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/-->
-				<!--/*-->
-				 <!--var disqus_config = function () {-->
-				 <!--this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable-->
-				 <!--this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable-->
-				 <!--};-->
-				 <!--*/-->
-                <!--(function() { // DON'T EDIT BELOW THIS LINE-->
-                    <!--var d = document, s = d.createElement('script');-->
-                    <!--s.src = 'https://temilee-github-io.disqus.com/embed.js';-->
-                    <!--s.setAttribute('data-timestamp', +new Date());-->
-                    <!--(d.head || d.body).appendChild(s);-->
-                <!--})();-->
-			<!--</script>-->
-			<!--<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>-->
-
-
-		<!--</div>-->
-    <!--</div>-->
-
-<!--</article>-->
 
 <header class="post-header">
 	<div>
