--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -444,7 +444,7 @@ div.float-right{
     position:fixed;
     right:0;
 	/* margin-top:50px; */
-    margin-top:1%;
+    /*margin-top:1%;*/
 	margin-right:2%;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
