--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -78,7 +78,7 @@
 //        //background-color: #f7f7f7;
 //    }
 //
-//    .lineno { padding-right: 24px; color: #8f908a;}
+//    .lineno { padding-right: 24px; color: #8f908a;white-space: pre-wrap!important;}
 //    .hll { background-color: #49483e }
 //    .c { color: #75715e } /* Comment */
 //    .err { color: #960050; background-color: #1e0010 } /* Error */
